; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_large_obj.c_start_lo_xact.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_large_obj.c_start_lo_xact.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [32 x i8] c"%s: not connected to a database\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"BEGIN\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"%s: current transaction is aborted\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"%s: unknown transaction status\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @start_lo_xact to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @start_lo_xact(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @pg_log_error(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %12)
  store i32 0, i32* %3, align 4
  br label %34

14:                                               ; preds = %2
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 4
  %16 = call i32 @PQtransactionStatus(i32 %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  switch i32 %17, label %30 [
    i32 130, label %18
    i32 128, label %26
    i32 129, label %27
  ]

18:                                               ; preds = %14
  %19 = call i32* @PSQLexec(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i32* %19, i32** %7, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %18
  store i32 0, i32* %3, align 4
  br label %34

22:                                               ; preds = %18
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @PQclear(i32* %23)
  %25 = load i32*, i32** %5, align 8
  store i32 1, i32* %25, align 4
  br label %33

26:                                               ; preds = %14
  br label %33

27:                                               ; preds = %14
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @pg_log_error(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i8* %28)
  store i32 0, i32* %3, align 4
  br label %34

30:                                               ; preds = %14
  %31 = load i8*, i8** %4, align 8
  %32 = call i32 @pg_log_error(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i8* %31)
  store i32 0, i32* %3, align 4
  br label %34

33:                                               ; preds = %26, %22
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %30, %27, %21, %11
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @pg_log_error(i8*, i8*) #1

declare dso_local i32 @PQtransactionStatus(i32) #1

declare dso_local i32* @PSQLexec(i8*) #1

declare dso_local i32 @PQclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
